# OpenClassrooms_P5

./: .coverage  .gitattributes  .gitignore  Dockerfile  MODEL_CARD.md  README.md  app.py  create_tables.py  database.py  final_data_set.csv  init_db.py  main.py  pyproject.toml  train_model.py
.github/workflows/: ci_pipeline.yml
Dockerfile/: Dockerfile
app/models/: ml_model.py
model/: model.pkl  modele_churn_light.pkl  mon_modele.joblib  mon_modele.pkl
tests/: Test_Agababyan_Artur_notebook_112025.py  test_app.py  test_complete.py
