[project]
name = "projet5"
version = "0.1.0"
description = "Mon projet de Data Science"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.122.0",
    "imbalanced-learn>=0.14.0",
    "ipykernel>=7.1.0",
    "lightgbm>=4.6.0",
    "matplotlib>=3.10.7",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "psycopg2-binary>=2.9.11",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.1",
    "scikit-learn (>=1.7.2,<2.0.0)",
    "seaborn>=0.13.2",
    "shap>=0.49.1",
    "sqlalchemy>=2.0.44",
    "uvicorn>=0.38.0",
    "xgboost>=3.1.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.1",
    "pytest-cov>=7.0.0",
    "ruff>=0.8.0",   # <-- Indispensable pour que 'uv run ruff' fonctionne
    "black>=24.0.0", # <-- Indispensable pour que 'uv run black' fonctionne
]

[tool.ruff]
# On exclut les dossiers de cache et virtuels
exclude = [".venv", ".git", "__pycache__", "build", "dist"]

[tool.ruff.lint]
# On ignore certaines règles globales si besoin, mais surtout :
ignore = []

[tool.ruff.lint.per-file-ignores]
# Pour les notebooks (*.ipynb), on ignore l'erreur E402 (Imports pas en haut)
"*.ipynb" = ["E402"]
# On peut aussi ignorer les lignes trop longues dans les notebooks
# "*.ipynb" = ["E501"]
